--- a/solution_qbl.yaml
+++ b/solution_qbl.yaml
@@ -1,6 +1,6 @@
 Solution:
   Id: 14b17764-d754-42e3-a5fa-2a4eaf6457d3
-  Name: GITHUB Action test
+  Name: GITHUB Update Action test
   Owner: ekaradzha@quickbase.com
   ExportDate: 2024-04-08 10:48:37
 Version: 0.2
