--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ inputs:
     description:
       'Filename for the QBL file the will be checked in the repository'
     default: 'solution_qbl.yaml'
-  qb_solution_update_id:
+  qb_solution_id_to_update:
     description: 'ID of solution to be updated'
     required: true
 
